[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1042.0
margin_bottom = 623.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 37.6182
margin_top = 475.243
margin_right = 259.618
margin_bottom = 587.243
text = "Publish Changes to PROD"

[node name="Button3" type="Button" parent="Panel"]
margin_left = 275.206
margin_top = 473.828
margin_right = 497.206
margin_bottom = 585.828
text = "Publish Changes to DEV"

[node name="Button2" type="Button" parent="Panel"]
margin_left = 751.796
margin_top = 465.343
margin_right = 973.796
margin_bottom = 577.343
text = "Delete Data from PROD"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 74.0
margin_top = 27.0
margin_right = 931.0
margin_bottom = 439.0
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
